Added index lists

--- a/index.html
+++ b/index.html
@@ -97,7 +97,235 @@
     </div>
 
   </aside>
-</main>
+  <section class="index">
+    <ul class="index-titles">
+      <li class="index-tiles-item">
+      <h2>NEWS</h2>
+      <ul class="site-index-section-list">
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Home Page</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">World</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">U.S.</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Politics</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Election 2020</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">New York</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Business</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Tech</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Science</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Sports</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Obituaries</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Today's Paper</a>
+        </li>
+        <li class="site-index-section-item">
+          <a class="site-index-section-link" href="#">Corrections</a>
+        </li>
+      </ul>
+    <li class="index-tiles-item">
+    <h2>OPINION</h2>
+    <ul class="site-index-section-list">
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Today's Opinion</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Op-Ed Columnists</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Editorials</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Op-Ed Contributors</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Letters</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Sunday Review</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Video: Opinion</a>
+    </li>
+    </ul>
+    <li class="index-tiles-item">
+    <h2>ARTS</h2>
+    <ul class="site-index-section-list">
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Today's Arts</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Art & Design</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Books</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Dance</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Movies</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Music</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Pop Culture</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Television</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Theater</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Video: Arts</a>
+    </li>
+    </ul>
+    <li class="index-tiles-item">
+    <h2>LIVING</h2>
+    <ul class="site-index-section-list">
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Automobiles</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Crossword</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Education</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Food</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Health</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Jobs</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Magazine</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Parenting</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Real Estate</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Style</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">T Magazine</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Travel</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Love</a>
+    </li>
+    </ul>
+    <li class="index-tiles-item">
+    <h2>MORE</h2>
+    <ul class="site-index-section-list">
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Reader Center</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Wirecutter</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Live Events</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">The Learning Network</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Tools & Services</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">N.Y.C. Events Guide</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Multimedia</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Photography</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Video</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Newsletters</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">NYT Store</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Times Journeys</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Manage My Account</a>
+    </li>
+    </ul>
+    <li class="index-tiles-item">
+    <h2>SUBSCRIBE</h2>
+    <ul class="site-index-section-list">
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Home Delivery</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Digital Subscriptions</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Crossword</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Cooking</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Email Newsletters</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Corporate Subscriptions</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Education Rate</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Mobile Applications</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Replica Edition</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">Español</a>
+    </li>
+    <li class="site-index-section-item">
+    <a class="site-index-section-link" href="#">中文网</a>
+    </li>
+    </ul>
+    </ul>
+  </section>
 
 <footer><h3 class="h2-footer">
   <a class="footer-link" hfer="#">©&nbsp;2020 The New York Times Company</a>
@@ -141,6 +369,7 @@
     <a class="footer-link" href="https://www.nytimes.com/subscription?campaignId=37WXW">Subscriptions</a>
   </li>
   </ul></footer>
+</main>
 
 </body>
 
