Main section created with aside bar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
     </figure>
 
   </section>
+  <aside>
+    <h4>Editors’ Picks</h4>
+    <hr>
+    <div class="aside_content">
+      <img
+        src="https://static01.nyt.com/images/2020/02/28/reader-center/28marathon-poster/28marathon-poster-square640.jpg"
+        alt="Server Fail!">
+      <p>Why Are American Women Running Faster Than Ever? We Asked Them — Hundreds of Them</p>
+
+    </div>
+    <div class="aside_content"><img
+        src="https://static01.nyt.com/images/2020/02/27/fashion/27royalmystery-1/27royalmystery-1-square640.jpg"
+        alt="Server Fail!">
+      <p>A Royal Instagram Mystery</p>
+    </div>
+    <div class="aside_content"><img
+        src="https://static01.nyt.com/images/2020/03/01/arts/01azaria-combo/01azaria-combo-square640.jpg"
+        alt="Server Fail!">
+      <p>Why Hank Azaria Won’t Play Apu on ‘The Simpsons’ Anymore</p>
+    </div>
+
+  </aside>
   <article>
     <h5>By Dennis Overbye</h5>
     <div>
@@ -74,73 +96,61 @@
       the fabric of space-time — so-called gravitational waves — the signature of a universe being wrenched violently
       apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought
       smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.</p>
-  </article>
-  <aside>
-    <h4>Editors’ Picks</h4>
-    <hr>
-    <div class="aside_content">
-      <img
-        src="https://static01.nyt.com/images/2020/02/28/reader-center/28marathon-poster/28marathon-poster-square640.jpg"
-        alt="Server Fail!">
-      <p>Why Are American Women Running Faster Than Ever? We Asked Them — Hundreds of Them</p>
+      <div class="create-account">
+        <div >
+        <p>Unlock more free articles </p>
+        <p><a href="#">Create an account to log in</a></p>
+      </div></div>
 
-    </div>
-    <div class="aside_content"><img
-        src="https://static01.nyt.com/images/2020/02/27/fashion/27royalmystery-1/27royalmystery-1-square640.jpg"
-        alt="Server Fail!">
-      <p>A Royal Instagram Mystery</p>
-    </div>
-    <div class="aside_content"><img
-        src="https://static01.nyt.com/images/2020/03/01/arts/01azaria-combo/01azaria-combo-square640.jpg"
-        alt="Server Fail!">
-      <p>Why Hank Azaria Won’t Play Apu on ‘The Simpsons’ Anymore</p>
-    </div>
-
-  </aside>
+      <p>Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.</p>
+      <p>If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and energy to science and speculation.</p>
+    <p>Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.</p>
+    </article>
+    <footer><h3 class="h2-footer">
+      <a class="footer-link" hfer="#">©&nbsp;2020 The New York Times Company</a>
+    </h3>
+    
+    <ul class="footer-list">
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://www.nytco.com/">NYTCo</a>
+      </li>
+        <li class="footer-list-items">
+      <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115015385887-Contact-Us">Contact Us</a>
+      </li>
+        <li class="footer-list-items">
+      <a class="footer-link" href="https://www.nytco.com/careers/">Work with us</a>
+        </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://nytmediakit.com/">Advertise</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="http://www.tbrandstudio.com/">T Brand Studio</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014892108-Privacy-policy">Your Ad Choices</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014892108-Privacy-policy">Privacy</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014893428-Terms-of-service">Terms of Service</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014893968-Terms-of-sale">Terms of Sale</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://spiderbites.nytimes.com">Site Map</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://help.nytimes.com/hc/en-us">Help</a>
+      </li>
+      <li class="footer-list-items">
+        <a class="footer-link" href="https://www.nytimes.com/subscription?campaignId=37WXW">Subscriptions</a>
+      </li>
+      </ul></footer>
 </main>
 
-<footer><h3 class="h2-footer">
-  <a class="footer-link" hfer="#">©&nbsp;2020 The New York Times Company</a>
-</h3>
 
-<ul class="footer-list">
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://www.nytco.com/">NYTCo</a>
-  </li>
-    <li class="footer-list-items">
-  <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115015385887-Contact-Us">Contact Us</a>
-  </li>
-    <li class="footer-list-items">
-  <a class="footer-link" href="https://www.nytco.com/careers/">Work with us</a>
-    </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://nytmediakit.com/">Advertise</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="http://www.tbrandstudio.com/">T Brand Studio</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014892108-Privacy-policy">Your Ad Choices</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014892108-Privacy-policy">Privacy</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014893428-Terms-of-service">Terms of Service</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://help.nytimes.com/hc/en-us/articles/115014893968-Terms-of-sale">Terms of Sale</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://spiderbites.nytimes.com">Site Map</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://help.nytimes.com/hc/en-us">Help</a>
-  </li>
-  <li class="footer-list-items">
-    <a class="footer-link" href="https://www.nytimes.com/subscription?campaignId=37WXW">Subscriptions</a>
-  </li>
-  </ul></footer>
 
 </body>
 
