Aside bar and recomended article added

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     <h5>By Dennis Overbye</h5>
     <div>
       <div>March 17, 2014</div>
-      <div>
-        <i>F</i>
-        <i>T</i>
-        <i>G</i>
-        <i>SH</i>
-        <i>B</i>
-        <i>L</i>
+      <div class="icons">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fas fa-envelope"></i>
+        <i class="fas fa-share"></i>
+        <i class="far fa-bookmark"></i>
+        <i class="far fa-comment-dots"></i>
       </div>
     </div>
     <p>CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a
@@ -107,7 +107,147 @@
       <p>If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and energy to science and speculation.</p>
     <p>Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.</p>
     </article>
+   <section class="theory-of-inflation">
+     <h3>The Theory of Inflation</h3>
+     <p>Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
    
+     <div class="all-theories">
+
+     <div class="theory"><b>THE UNIVERSE </b>  is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</div>
+     <div class="theory"><b>NOT ENOUGH TIME</b>  The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.</div>
+     <div class="theory"><b>DISTANT COFFEE</b>  At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled. </div>
+     <div class="theory"><b>COFFEE EVERYWHERE</b>  Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation</div>
+     <div class="theory"><b>STILL NOT ENOUGH TIME</b>  There has not been enough time to carry coffee cups from place to place before they get cold. But if all the coffee cups were somehow filled from a single coffee pot, all at the same time, that might explain their even temperature.</div>
+     <div class="theory"><b>INFLATION</b>  solves this problem. The theory proposes that, less than a trillionth of a second after the Big Bang, the universe expanded faster than the speed of light. Tiny ripples in the violently expanding energy field eventually grew into the large-scale structures of the universe.</div>
+     <div class="theory"><b>FLUCTUATION</b>  Astronomers have now detected evidence of these ancient fluctuations in swirls of polarized light in the cosmic background radiation, which is energy left over from the early universe. These are gravitational waves predicted by Einstein.</div>
+     <div class="theory"><b>EXPANSION</b>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot.</div>
+   </div>
+   <p class='by-larry'>By LARRY BUCHANAN and JONATHAN CORUM</p>
+    </section>
+    <article>
+      <p>Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
+
+        Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.</p>
+      <p>Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, <a href='#'> knocked on his door with a bottle of Champagne</a> to tell him the news.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" ></iframe>
+    
+      <b>Spirals in the Sky</b>
+    <p>Gravity waves are the latest and deepest secret yet pried out of the cosmic microwaves, which were discovered accidentally by Arno Penzias and Robert Wilson at Bell Labs 50 years ago. They won the Nobel Prize.</p>
+    <p>Dr. Kovac has spent his career trying to read the secrets of these waves. He is one of four leaders of Bicep, which has operated a series of increasingly sensitive radio telescopes at the South Pole, where the thin, dry air creates ideal observing conditions. The others are Clement Pryke of the University of Minnesota, Jamie Bock of the California Institute of Technology and Dr. Kuo of Stanford.</p>
+  <figure>
+    <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg" alt="Server Faild!">
+    <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.Credit...Steffen Richter/Associated Press</figcaption>
+  </figure>
+  <p>In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.</p>
+  <p>This was a step toward the ultimate goal of detecting the gravitational waves from inflation. Such waves, squeezing space in one direction and stretching it in another as they go by, would twist the direction of polarization of the microwaves, theorists said. As a result, maps of the polarization in the sky should have little arrows going in spirals.</p>
+<b>A Special Time</b>
+<p>The data traced the onset of inflation to a time that physicists like Dr. Guth, staying up late in his Palo Alto house 35 years ago, suspected was a special break point in the evolution of the universe.</p>
+<p>We might never know what happened before inflation, at the very beginning, because inflation erases everything that came before it. All the chaos and randomness of the primordial moment are swept away, forever out of our view.</p>
+<p>“If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”</p>
+<small>A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. <a href='#'>Order Reprints</a> | <Today’s href='#'>Today’s Paper</a> | <a href='#'>Subscribe</a></small>
+<div class="article-footer">
+<button>READ 615 COMMENTS</button>
+<div class="icons">
+  <i class="fab fa-facebook"></i>
+  <i class="fab fa-twitter"></i>
+  <i class="fas fa-envelope"></i>
+  <i class="fas fa-share"></i>
+</div>
+</div>
+</article>
+<section class="more-article">
+ <div class="content">
+  <span class="content-header">More in Space and Astronomy</span>
+   <div class="rec-article">
+<figure>
+  <a href="#"><img src="https://static01.nyt.com/images/2020/03/27/science/27MINIMOON2/merlin_169717554_33b395e2-6c47-4743-bbdb-ac197bca5c92-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+  <figcaption>Northrop Grumman</figcaption>
+</figure>
+<h3>A New Mini-Moon Was Found Orbiting Earth. There Will Be More.</h3><small>Feb. 26</small>
+   </div>
+
+    <div class="rec-article">
+ <figure>
+  <a href="#"><img src="https://static01.nyt.com/images/2020/02/26/science/26SATELLITE/26SATELLITE-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+   <figcaption>Gemini Observatory/NSF’s National Optical-Infrared Astronomy Research Laboratory/AURA/G. Fedorets</figcaption>
+ </figure>
+ <h3>An Orbital Rendezvous Demonstrates a Space Junk Solution</h3><small>Feb. 27</small>
+    </div>
+
+ 
+      <div class="rec-article">
+   <figure>
+    <a href="#"><img src="https://static01.nyt.com/images/2020/03/27/science/27MINIMOON2/merlin_169717554_33b395e2-6c47-4743-bbdb-ac197bca5c92-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+     <figcaption>Northrop Grumman</figcaption>
+   </figure>
+   <h3>A New Mini-Moon Was Found Orbiting Earth. There Will Be More.</h3><small>Feb. 26</small>
+      </div>
+   
+       <div class="rec-article">
+    <figure>
+      <a href="#"><img src="https://static01.nyt.com/images/2020/02/26/science/26SATELLITE/26SATELLITE-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+      <figcaption>Gemini Observatory/NSF’s National Optical-Infrared Astronomy Research Laboratory/AURA/G. Fedorets</figcaption>
+    </figure>
+    <h3>An Orbital Rendezvous Demonstrates a Space Junk Solution</h3><small>Feb. 27</small>
+       </div>
+ 
+        <div class="rec-article">
+     <figure>
+      <a href="#"><img src="https://static01.nyt.com/images/2020/03/27/science/27MINIMOON2/merlin_169717554_33b395e2-6c47-4743-bbdb-ac197bca5c92-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+       <figcaption>Northrop Grumman</figcaption>
+     </figure>
+     <h3>A New Mini-Moon Was Found Orbiting Earth. There Will Be More.</h3><small>Feb. 26</small>
+        </div>
+  
+         <div class="rec-article">
+      <figure>
+        <a href="#"><img src="https://static01.nyt.com/images/2020/02/26/science/26SATELLITE/26SATELLITE-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+        <figcaption>Gemini Observatory/NSF’s National Optical-Infrared Astronomy Research Laboratory/AURA/G. Fedorets</figcaption>
+      </figure>
+      <h3>An Orbital Rendezvous Demonstrates a Space Junk Solution</h3><small>Feb. 27</small>
+         </div>
+         
+    <span class="content-header top-line">Editors’ Picks</span>
+
+
+      <div class="rec-article">
+   <figure>
+    <a href="#"><img src="https://static01.nyt.com/images/2020/03/01/arts/01azaria-combo/01azaria-combo-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+     <figcaption>Photographs by Erik Tanner for The New York Times</figcaption>
+   </figure>
+   <h3>Why Hank Azaria Won’t Play Apu on ‘The Simpsons’ Anymoren</h3><small>Feb. 25</small>
+      </div>
+  
+        <div class="rec-article">
+     <figure>
+      <a href="#"><img src="https://static01.nyt.com/images/2020/03/01/arts/01azaria-combo/01azaria-combo-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+       <figcaption>Photographs by Erik Tanner for The New York Times</figcaption>
+     </figure>
+     <h3>Why Hank Azaria Won’t Play Apu on ‘The Simpsons’ Anymoren</h3><small>Feb. 25</small>
+        </div>
+
+          <div class="rec-article">
+       <figure>
+        <a href="#"> <img src="https://static01.nyt.com/images/2020/03/01/arts/01azaria-combo/01azaria-combo-threeByTwoSmallAt2X.jpg" alt="Fail!"></a>
+         <figcaption>Photographs by Erik Tanner for The New York Times</figcaption>
+       </figure>
+       <h3>Why Hank Azaria Won’t Play Apu on ‘The Simpsons’ Anymoren</h3><small>Feb. 25</small>
+          </div>
+ </div>
+ <div class="footer-aside-bar">
+   <h3>Most popular</h3>
+   <a href="#"><h3>Pete Buttigieg Drops Out of Democratic Presidential Race</h3></a>
+   <a href="#"><h3>Martin Freeman: No More Mr. Nice Dad</h3></a>
+   <a href="#"><h3>This Was Molly Seidel’s First Marathon. Her Next Will Be at the Olympics.</h3></a>
+   <a href="#"><h3>Opinion: Bernie or Biden. Period.</h3></a>
+   <a href="#"><h3>2nd Death Near Seattle Adds to Signs Virus Is Spreading in U.S.</h3></a>
+   <a href="#"><h3>How Does the Coronavirus Compare With the Flu?</h3></a>
+   <a href="#"><h3>Opinion: Mayor Pete Flew Sky High</h3></a>
+   <a href="#"><h3>Aaron Sorkin on How He Would Write the Democratic Primary for ‘The West Wing’</h3></a>
+   <a href="#"><h3>For Seoul’s Poor, Class Strife in ‘Parasite’ Is Daily Reality</h3></a>
+   <a href="#"><h3>Opinion: Here Comes the Coronavirus Pandemic</h3></a>
+ </div>
+</section>
   <section class="index">
     <ul class="index-titles">
       <li class="index-tiles-item">
