Added fixed bar after footer and rearrenged articles

--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
         universe there might be an endless number of other universes bubbling
         into frothy eternity, like a pot of pasta water boiling over.
       </p>
-    </article>
     <section class="theory-of-inflation">
       <h3>The Theory of Inflation</h3>
       <p>
@@ -212,7 +211,6 @@
       </div>
       <p class="by-larry">By LARRY BUCHANAN and JONATHAN CORUM</p>
     </section>
-    <article>
       <p>
         Dr. Kovac said the chance that the results were a fluke was only one
         in 10 million. Dr. Guth, now 67, pronounced himself “bowled over,”
@@ -228,7 +226,7 @@
         tell him the news.
       </p>
       <figure>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA"></iframe>
+        <iframe src="https://www.youtube.com/embed/ZlfIVEy_YOA"></iframe>
         <figcaption>Stanford Professor Andrei Linde celebrates physics breakthroughCredit...CreditVideo by
           StanfordUniversity</figcaption>
       </figure>
@@ -267,9 +265,7 @@
         Clement Pryke of the University of Minnesota, Jamie Bock of the
         California Institute of Technology and Dr. Kuo of Stanford.
       </p>
-    </article>
-    <section class="second-img">
-      <figure>
+     <figure class="second-img">
         <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg"
           alt="Server Faild!" />
         <figcaption>
@@ -279,9 +275,7 @@
           Richter/Associated Press
         </figcaption>
       </figure>
-    </section>
-    <article>
-      <p>
+       <p>
         In 2002, he was part of a team that discovered that the microwave
         radiation was polarized, meaning the light waves had a slight
         preference to vibrate in one direction rather than another.
@@ -807,6 +801,10 @@
       </ul>
     </footer>
   </main>
+  <div class=fixed-footer>
+    <h4>Access more of Times by creating a free account and logging in.</h4>
+    <span>Expand ^</span>
+  </div>
 </body>
 
 </html>
